

2008-03-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #7397: improper handling of non-transparent reverse proxies

2008-03-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7291: Taskcenter -> sys_action - viewport is too small when creating records (patch by Steffen Kamper)
	* Fixed bug #5788: Add a delete button to the yellow warning box for removing the ENABLE_INSTALL_TOOL_FILE
	* Added hook #7657: New hook "tslib_fe-contentStrReplace" allows to overwrite content on a website after all the caching was already done. Only applies if "config.sendCacheHeaders" is disabled! This hook is very useful for small on-the-fly replacements, for example display the fe_user name, or the time used for page generation.

2008-03-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Small cleanup in tslib (fixed use of uninitialized variables and added @var)

2008-03-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5838: cli_dispatch.phpsh doesn't work on windows platforms

2008-02-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #4121: Pasting content on RTE moves cursor to the top of the text
	* Fixed bug #7716: htmlArea RTE plugins using some undeclared variables

2008-02-29  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7545: Explain queries does not work when selecting multiple tables (patch by Ingo Schmitt)

2008-02-29  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #1358: Installer didn't honour forceCharset (patch by Masi)

2008-02-28  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #7150: Add pageUnavailable_handling for system problems and maintenance

2008-02-28  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7684: htmlArea RTE: Cursor positioning when creating new table
	* Partially fixed bug #6714: htmlArea RTE: Poor tag handling everywhere in Opera

2008-02-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7502: Show Sitename on Login screen (Thanks to Steffen Kamper)
